# rethinkdb-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md
etc/: ql2.proto  query.py  repl.py
examples/: employees.rs
src/: errors.rs  from_response.rs  lib.rs  query.rs  term.rs
src/net/: mod.rs  response.rs
src/query/: cursor.rs  db.rs  expr.rs  mod.rs  table.rs  term_type.rs
src/query2/: mod.rs
src/restink/: datum.rs  from_response.rs  lib.rs  net.rs  protocol.rs  query.rs  term.rs  test.rs
src/restink-example/: main.rs
src/restink/net/: mod.rs  response.rs
src/rethinkdb/: from_response.rs  lib.rs  query.rs  term.rs
src/rethinkdb/net/: mod.rs  response.rs
src/rethinkdb/query2/: mod.rs
