[package]

name = "rethinkdb"
version = "0.1.0"
authors = ["Tom Jakubowski <tom@crystae.net>"]

[lib]

name = "rethinkdb"
path = "src/rethinkdb/lib.rs"
doctest = false # FIXME

[[example]]

name = "employees"
path = "examples/employees.rs"

[dev-dependencies.json_macros]
git = "https://github.com/tomjakubowski/json_macros"
